# MLOperations

./: .gitignore  README.md  feature_importance_lr.csv  mlevaluation.md  mlflow.db  monitor.py  pyproject.toml  retrain.py  train.py
notebooks/: 01_eda.ipynb
reports/: model_card.py  psi_summary.csv
reports/monitoring_retrain/: retraining_report_20260503_082024.json  retraining_report_20260503_082340.json
src/inference/: predict_batch.py  serve.py
src/training/: retrain.py  train.py
