[project]
name = "mlops"
version = "0.1.0"
description = "MLOps project: risk flag classification pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "uvicorn>=0.42.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
]
